2009-11-02  Dodji Seketeli  <dodji@redhat.com>

	PR c++/37093
	* g++.dg/other/ptrmem10.C: New test.
	* g++.dg/other/ptrmem11.C: Likewise.

2009-11-02  Janis Johnson  <janis187@us.ibm.com>

	PR testsuite/41878
	* gfortran.dg/vect/vect-2.f90: Fix effective-target expression, add
	spaces in some expressions.

2009-11-02  Jason Merrill  <jason@redhat.com>

	* g++.dg/other/linkage2.C: Move to...
	* g++.dg/cpp0x/linkage2.C: ..here.
	* g++.dg/abi/mangle32.C: Add -std=c++0x.
	* g++.dg/cpp0x/nolinkage1.C: Likewise.
	* g++.dg/debug/dwarf2/anonname1.C: Likewise.
	* g++.dg/ext/anon-struct4.C: Revert earlier change.
	* g++.dg/lookup/anon2.C: Likewise.
	* g++.dg/other/anon3.C: Likewise.
	* g++.dg/template/arg2.C: Likewise.
	* g++.dg/template/local4.C: Likewise.
	* g++.old-deja/g++.law/operators32.C: Likewise.
	* g++.old-deja/g++.other/linkage2.C: Likewise.
	* g++.old-deja/g++.pt/enum6.C: Likewise.
	* g++.old-deja/g++.other/anon9.C: Likewise.
	* g++.old-deja/g++.other/linkage1.C: Likewise.
	* c-c++-common/dfp/pr35620.c: Give the union a name.

2009-11-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	PR tree-optimization/41857
	* gcc.target/spu/ea/pr41857.c: New file.

2009-11-02  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/41750
	* gcc.c-torture/execute/pr41750.c: New test.

2009-11-02  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/41841
	* gcc.dg/pr41841.c: New test.

	PR debug/41893
	* gcc.dg/debug/pr41893-1.c: New test.
	* gcc.dg/debug/pr41893-2.c: New file.

	PR c++/41774
	* g++.dg/ext/visibility/namespace3.C: New test.

2009-11-01  Jason Merrill  <jason@redhat.com>

	* gcc.dg/tree-ssa/restrict-1.c: Move to c-c++-common.
	* gcc.dg/tree-ssa/restrict-2.c: Move to c-c++-common.
	* gcc.dg/tree-ssa/restrict-4.c: Move to c-c++-common.

2009-11-01  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/opt5.adb: New test.

2009-11-01  Tobias Burnus  <burnus@net-b.de>

	PR fortran/41872
	* gfortran.dg/allocatable_scalar_4.f90: New test.
